[project]
name = "staffer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "lightning>=2.6.1",
    "matplotlib>=3.10.8",
    "opencv-python>=4.13.0.92",
    "pytorch-lightning>=2.6.1",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]
